--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -179,6 +179,19 @@ month={Sept}
  keywords = {CK metric suite, maintainability, metrics, object-oriented system, software}
 } 
 
+@ARTICLE{Rosane:1981, 
+author={A. F. Rosene and J. E. Connolly and K. M. Bracy}, 
+journal={IEEE Transactions on Reliability}, 
+title={Software Maintainability - What It Means and How to Achieve It}, 
+year={1981}, 
+volume={R-30}, 
+number={3}, 
+pages={240-245}, 
+keywords={Communication system control;Computer architecture;Engineering management;Maintenance engineering;Matrices;Multitasking;Software design;Software maintenance;Testing;Time sharing computer systems;Design evaluation;Maintenance prediction;Software Architecture}, 
+doi={10.1109/TR.1981.5221065}, 
+ISSN={0018-9529}, 
+month={Aug}
+}
 
 
 % yleinen testattavuus
@@ -311,6 +324,18 @@ month={Sept}
 }
 
 % arkkitehtuuriset hajut 
+
+@inproceedings{macia_enhancing_2013,
+	title = {Enhancing the Detection of Code Anomalies with Architecture-Sensitive Strategies},
+	isbn = {978-0-7695-4948-4 978-1-4673-5833-0},
+	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6498466},
+	doi = {10.1109/CSMR.2013.27},
+	pages = {177--186},
+	publisher = {{IEEE}},
+	author = {Macia, I. and Garcia, A. and Chavez, C. and von Staa, A.},
+	urldate = {2016-03-15},
+	date = {2013-03},
+}
 
 @INPROCEEDINGS{HotSpot, 
 author={R. Mo and Y. Cai and R. Kazman and L. Xiao}, 
