--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -504,8 +504,12 @@ Architecture sensitive analysis (code metrics) \citep[s. 185]{macia_enhancing_20
 
 Arkkitehtuurisia hajuja + Hybridi hajuja (koodi ja arkk.) ohjelmistojen product lineissa \citep{vale_bad_2014}
 
+Tietyt koodihajut voivat olla merkki arkkitehtuuristen hajujen olemassaolosta (aspect oriented architecture + should be others too) \citep[s. 47]{macia_impact_2011}. SPF -> CB (Composition Bloat), GA (God Aspect related to God Class/God Interface), GP (God Pointcut), DP (Duplicate Pointcut). CEn -> GP. 
+
 
 Koodi ja arkkitehtuuri-info. Detection strategies \citep[s. 179-182]{macia_enhancing_2013}
+
+
 
 
 
@@ -562,6 +566,8 @@ Näiden avulla saadaan riippuvuudet ja niiden tyypit paremmin esille kaavioissa.
 Metriikat + riippuvuusgraph.
 
 Muita keinoja tutkia -> formulointi (Design Structure Matrix) \citep{mo_mapping_2013}
+
+Erilaisia skenaariopohjaisia menetelmiä ehdottaa \citep[s. 8-9]{obbink_software_2005} testattavuuden kannalta: SAAM, ATAM, EBAE.
 
 
 \section{Yhteenveto}
