--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -325,6 +325,21 @@ month={Sept}
 
 % arkkitehtuuriset hajut 
 
+
+@inproceedings{vale_bad_2014,
+	title = {Bad Smells in Software Product Lines: A Systematic Review},
+	isbn = {978-1-4799-7860-1},
+	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7012985},
+	doi = {10.1109/SBCARS.2014.21},
+	shorttitle = {Bad Smells in Software Product Lines},
+	pages = {84--94},
+	publisher = {{IEEE}},
+	author = {Vale, Gustavo and Figueiredo, Eduardo and Abilio, Ramon and Costa, Heitor},
+	urldate = {2016-03-15},
+	date = {2014-09}
+	year = {2014}
+}
+
 @inproceedings{macia_enhancing_2013,
 	title = {Enhancing the Detection of Code Anomalies with Architecture-Sensitive Strategies},
 	isbn = {978-0-7695-4948-4 978-1-4673-5833-0},
@@ -351,6 +366,32 @@ month={May}
 
 % testattavuus arkkitehtuurissa
 
+
+@inproceedings{kazman_case_2015,
+	title = {A Case Study in Locating the Architectural Roots of Technical Debt},
+	isbn = {978-1-4799-1934-5},
+	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7202962},
+	doi = {10.1109/ICSE.2015.146},
+	pages = {179--188},
+	publisher = {{IEEE}},
+	author = {Kazman, Rick and Cai, Yuanfang and Mo, Ran and Feng, Qiong and Xiao, Lu and Haziyev, Serge and Fedak, Volodymyr and Shapochka, Andriy},
+	urldate = {2016-03-15},
+	date = {2015-05},
+	year = {2015}
+}
+
+@inproceedings{gao_component_2005,
+	title = {A component testability model for verification and measurement},
+	volume = {2},
+	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=1508112},
+	pages = {211--218},
+	booktitle = {Computer Software and Applications Conference, 2005. {COMPSAC} 2005. 29th Annual International},
+	publisher = {{IEEE}},
+	author = {Gao, Jerry and Shih, Ming-Chih},
+	urldate = {2016-03-15},
+	year = {2005}
+}
+
 @inproceedings{Eickelmann:1996:MOS:243327.243602,
  author = {Eickelmann, Nancy S. and Richardson, Debra J.},
  title = {What Makes One Software Architecture More Testable Than Another?},
@@ -368,7 +409,32 @@ month={May}
  address = {New York, NY, USA}
 } 
 
+@inproceedings{joshi_design_2014,
+	title = {Design and code time testability analysis for object oriented systems},
+	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6828029},
+	pages = {590--592},
+	booktitle = {Computing for Sustainable Global Development ({INDIACom}), 2014 International Conference on},
+	publisher = {{IEEE}},
+	author = {Joshi, Madhura and Sardana, Neetu},
+	urldate = {2016-03-15},
+	year = {2014}
+}
+
 % Arkkitehtuuriset hajut
+
+@inproceedings{macia_impact_2011,
+	title = {On the Impact of Aspect-Oriented Code Smells on Architecture Modularity: An Exploratory Study},
+	isbn = {978-0-7695-4626-1 978-1-4673-0208-1},
+	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6114565},
+	doi = {10.1109/SBCARS.2011.18},
+	shorttitle = {On the Impact of Aspect-Oriented Code Smells on Architecture Modularity},
+	pages = {41--50},
+	publisher = {{IEEE}},
+	author = {Macia, Isela and Garcia, Alessandro and von Staa, Arndt and Garcia, Joshua and Medvidovic, Nenad},
+	urldate = {2016-03-15},
+	date = {2011-09},
+	year = {2011}
+}
 
 @inproceedings{de_andrade_architectural_2014,
 	title = {Architectural bad smells in software product lines: an exploratory study},
@@ -434,3 +500,40 @@ month={May}
 	file = {06032597.pdf:files/121/06032597.pdf:application/pdf}
 }
 
+% pohdintaa
+
+@inproceedings{mo_mapping_2013,
+	title = {Mapping architectural decay instances to dependency models},
+	url = {http://dl.acm.org/citation.cfm?id=2663304},
+	pages = {39--46},
+	booktitle = {Proceedings of the 4th International Workshop on Managing Technical Debt},
+	publisher = {{IEEE} Press},
+	author = {Mo, Ran and Garcia, Joshua and Cai, Yuanfang and Medvidovic, Nenad},
+	urldate = {2016-03-15},
+	year = {2013}
+}
+
+@inproceedings{wong_detecting_2011,
+	title = {Detecting software modularity violations},
+	url = {http://dl.acm.org/citation.cfm?id=1985850},
+	pages = {411--420},
+	booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
+	publisher = {{ACM}},
+	author = {Wong, Sunny and Cai, Yuanfang and Kim, Miryung and Dalton, Michael},
+	urldate = {2016-03-15},
+	year = {2011}
+}
+
+@collection{obbink_software_2005,
+	location = {Berlin ; New York},
+	title = {Software product lines: 9th international conference, {SPLC} 2005, Rennes, France, September 26-29, 2005: proceedings},
+	isbn = {978-3-540-28936-4},
+	series = {Lecture notes in computer science},
+	shorttitle = {Software product lines},
+	pagetotal = {233},
+	number = {3714},
+	publisher = {Springer},
+	editor = {Obbink, Henk and Pohl, Klaus},
+	year = {2005},
+	keywords = {Computer software, Development, Software Engineering}
+}
