--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -567,7 +567,7 @@ Metriikat + riippuvuusgraph.
 
 Muita keinoja tutkia -> formulointi (Design Structure Matrix) \citep{mo_mapping_2013}
 
-Erilaisia skenaariopohjaisia menetelmiä ehdottaa \citep[s. 8-9]{obbink_software_2005} testattavuuden kannalta: SAAM, ATAM, EBAE.
+Erilaisia skenaariopohjaisia menetelmiä ehdottaa \citep[s. 8-9]{mattsson2006software} testattavuuden kannalta: SAAM, ATAM, EBAE.
 
 
 \section{Yhteenveto}
