--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -336,7 +336,7 @@ month={Sept}
 	publisher = {{IEEE}},
 	author = {Vale, Gustavo and Figueiredo, Eduardo and Abilio, Ramon and Costa, Heitor},
 	urldate = {2016-03-15},
-	date = {2014-09}
+	date = {2014-09},
 	year = {2014}
 }
 
@@ -370,7 +370,6 @@ month={May}
 @inproceedings{kazman_case_2015,
 	title = {A Case Study in Locating the Architectural Roots of Technical Debt},
 	isbn = {978-1-4799-1934-5},
-	url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7202962},
 	doi = {10.1109/ICSE.2015.146},
 	pages = {179--188},
 	publisher = {{IEEE}},
@@ -383,7 +382,6 @@ month={May}
 @inproceedings{gao_component_2005,
 	title = {A component testability model for verification and measurement},
 	volume = {2},
-	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=1508112},
 	pages = {211--218},
 	booktitle = {Computer Software and Applications Conference, 2005. {COMPSAC} 2005. 29th Annual International},
 	publisher = {{IEEE}},
@@ -411,7 +409,6 @@ month={May}
 
 @inproceedings{joshi_design_2014,
 	title = {Design and code time testability analysis for object oriented systems},
-	url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6828029},
 	pages = {590--592},
 	booktitle = {Computing for Sustainable Global Development ({INDIACom}), 2014 International Conference on},
 	publisher = {{IEEE}},
@@ -524,16 +521,10 @@ month={May}
 	year = {2011}
 }
 
-@collection{obbink_software_2005,
-	location = {Berlin ; New York},
-	title = {Software product lines: 9th international conference, {SPLC} 2005, Rennes, France, September 26-29, 2005: proceedings},
-	isbn = {978-3-540-28936-4},
-	series = {Lecture notes in computer science},
-	shorttitle = {Software product lines},
-	pagetotal = {233},
-	number = {3714},
-	publisher = {Springer},
-	editor = {Obbink, Henk and Pohl, Klaus},
-	year = {2005},
-	keywords = {Computer software, Development, Software Engineering}
+@inproceedings{mattsson2006software,
+  title={Software architecture evaluation methods for performance, maintainability, testability, and portability},
+  author={Mattsson, Michael and Grahn, H{\aa}kan and M{\aa}rtensson, Frans},
+  booktitle={Second International Conference on the Quality of Software Architectures},
+  year={2006},
+  organization={Citeseer}
 }
